[workspace]

members = [
    "datadog-workflow",
    "alfred-workflow",
    "github-workflow",
    "date-formats-workflow",
    "buildkite-workflow",
]

# good read - https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
[profile.release]
lto = true
panic = 'abort' # not a normal but a pretty backtrace for panics not really necessary in release build