[workspace]

members = [
    "datadog-workflow",
    "alfred-workflow",
    "github-workflow",
    "date-formats-workflow",
    "buildkite-workflow",
]

[workspace.dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"
alfred = "4.0.2"
rusqlite = { version = "0.29.0", features = ["bundled-full"]}
clap = { version = "4.2.4", features = ["derive"] }

# good read - https://lifthrasiir.github.io/rustlog/why-is-a-rust-executable-large.html
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort' # not a normal but a pretty backtrace for panics not really necessary in release build