[package]
name = "alfred-workflow"
description = "This contains common and reusable abstractions for creating workflows."
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/alfred-workflow"
license = " MIT"
version = "1.1.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["alfred", "workflow"]
categories = ["development-tools"]

[dependencies]
alfred = "4.0.2"
dirs = "3.0.1"
failure = "0.1.8"

[dependencies.rusqlite]
features = [
    "bundled-full",
]
version = "0.23.1"
