[package]
name = "alfred-workflow"
description = "This contains common and reusable abstractions for creating workflows."
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/alfred-workflow"
license = " MIT"
version = "1.2.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["alfred", "workflow"]
categories = ["development-tools"]

[dependencies]
alfred = "4.0.2"
dirs = "4.0.0"
anyhow = "1.0.70"

[dependencies.rusqlite]
features = [
    "bundled-full",
]
version = "0.27.0"
