[package]
name = "alfred-workflow"
description = "This contains common and reusable abstractions for creating workflows."
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/alfred-workflow"
license = " MIT"
version = "1.3.0"
authors = ["Dean Karn <dean.karn@gmail.com>"]
edition = "2024"
readme = "README.md"
keywords = ["alfred", "workflow"]
categories = ["development-tools"]

[dependencies]
alfred.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
dirs = "6.0.0"
