[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = ["development-tools"]
description = "GitHub Alfred Workflow to quickly search and open buildkite pipelines."
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "buildkite",
]
license = "MIT"
name = "buildkite-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/buildkite-workflow"
version = "1.4.0"

[[bin]]
name = "buildkite-workflow"
path = "src/bin/main.rs"

[dependencies]
alfred.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
clap.workspace = true
regex = "1.10.2"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.23", features = ["rustls-tls","blocking", "json"] }

[lib]
name = "buildkite_workflow_lib"
path = "src/lib.rs"
