[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = ["development-tools"]
description = "Datadog Alfred Workflow to search dashboards, screenboards and monitors"
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "datadog",
]
license = " MIT"
name = "datadog-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/datadog-workflow"
version = "2.1.0"

[[bin]]
name = "datadog-workflow"
path = "src/bin/main.rs"

[dependencies]
alfred = "4.0.2"
clap = "2.34.0"
anyhow = "1.0.70"
thiserror = "1.0.40"

[dependencies.chrono]
features = ["serde"]
version = "0.4.24"

[dependencies.reqwest]
features = ["rustls-tls","blocking", "json"]
version = "0.11.16"

[dependencies.rusqlite]
features = [
    "bundled-full",
]
version = "0.27.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[lib]
name = "datadog_workflow_lib"
path = "src/lib.rs"
