[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = ["development-tools"]
description = "Datadog Alfred Workflow to search dashboards, screenboards and monitors"
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "datadog",
]
license = " MIT"
name = "datadog-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/datadog-workflow"
version = "2.2.0"

[[bin]]
name = "datadog-workflow"
path = "src/bin/main.rs"

[dependencies]
alfred.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
clap = "2.34.0"
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["rustls-tls","blocking", "json"] }

[lib]
name = "datadog_workflow_lib"
path = "src/lib.rs"
