[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = [
    "date-and-time",
    "development-tools",
]
description = "Date Formats Workflow to quickly handle common data formats and conversions."
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "date",
    "time",
    "datetime",
]
license = "MIT"
name = "date-formats-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/date-formats-workflow"
version = "1.5.0"

[dependencies]
alfred = "4.0.2"
chrono = "0.4.24"
chrono-tz = "0.8.2"
clap = { version = "4.2.4", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
anydate = "0.3.0"
