[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = [
    "date-and-time",
    "development-tools",
]
description = "Date Formats Workflow to quickly handle common data formats and conversions."
edition = "2024"
keywords = [
    "alfred",
    "workflow",
    "date",
    "time",
    "datetime",
]
license = "MIT"
name = "date-formats-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/date-formats-workflow"
version = "1.6.0"

[dependencies]
alfred.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono = "0.4.40"
chrono-tz = "0.10.3"
anydate = "0.4.0"
