[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = ["development-tools"]
description = "GitHub Alfred Workflow to quickly search and open repositories."
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "github",
]
license = "MIT"
name = "github-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/github-workflow"
version = "2.3.0"

[[bin]]
name = "github-workflow"
path = "src/bin/main.rs"

[dependencies]
alfred = "4.0.2"
clap = { version = "3.2.23", features = ["cargo"] }
dirs = "4.0.0"
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0.70"

[dependencies.chrono]
features = ["serde"]
version = "0.4.24"

[dependencies.reqwest]
features = ["rustls-tls","blocking", "json"]
version = "0.11.16"

[dependencies.rusqlite]
features = [
    "bundled-full",
]
version = "0.27.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.160"

[lib]
name = "github_workflow_lib"
path = "src/lib.rs"
