[package]
authors = ["Dean Karn <dean.karn@gmail.com>"]
categories = ["development-tools"]
description = "GitHub Alfred Workflow to quickly search and open repositories."
edition = "2018"
keywords = [
    "alfred",
    "workflow",
    "github",
]
license = "MIT"
name = "github-workflow"
readme = "README.md"
repository = "https://github.com/rust-playground/alfred-workflows-rs/tree/master/github-workflow"
version = "2.5.0"

[[bin]]
name = "github-workflow"
path = "src/bin/main.rs"

[dependencies]
alfred.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
clap.workspace = true
serde_json = "1.0.108"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["rustls-tls","blocking", "json"] }

[lib]
name = "github_workflow_lib"
path = "src/lib.rs"
